# cpp-education

./: README.md  rockstar_interview_question.cpp
src/: test_utils.h
src/SPSC/: benchmark.cpp  circular_queue.cpp  circular_queue.hpp  circular_queue_lock_free.cpp  circular_queue_lock_free.hpp  circular_queue_lock_free_acq_rel.cpp  circular_queue_lock_free_acq_rel.hpp  circular_queue_lock_free_acq_rel_alignas.cpp  circular_queue_lock_free_acq_rel_alignas.hpp  circular_queue_thread_safe.cpp  circular_queue_thread_safe.hpp  circular_queue_thread_safe_prealloc.cpp  circular_queue_thread_safe_prealloc.hpp  main.cpp  notes.md
src/a_tour_of_cpp/: 01.cpp  02.cpp  05  05.cpp  06.cpp  07.cpp  08.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  18.cpp  a.out
src/advent_of_code_2023/: 01-trebuchet-p2.cpp  01-trebuchet.cpp  a.out
src/algorithmica/: cache_associativity.cpp  loop_unroll.S  loop_unroll.cpp  loop_unroll_verbose.s  perf.data  run  statistical_profiling.cpp
src/cmake-libraries/cmake_0/: CMakeLists.txt
src/cmake-libraries/cmake_1/: CMakeLists.txt  threads.cpp
src/cmake/cmake_1/: CMakeLists.txt
src/compilation-phases/: hello_world.ii  hello_world.s  main
src/compiler-optimization/: main.cpp  main_0  main_1  main_2  main_3
src/concurrency_in_action/: chapter5.cpp
src/daemon/: filewatcher.c  makefile
src/debugging-with-addresssanitizer/: 0_error  0_error.cpp  1_error  2_error  2_error.cpp  3_error  3_error.cpp  4_error.cpp
src/debugging-with-gdb/: 0_error  1_error  1_error.cpp
src/debugging-with-valgrind/: 0_error  0_error.cpp  1_error  (+3 more)
(+234 files in other folders)
